--- a/action.yml
+++ b/action.yml
@@ -10,4 +10,5 @@ runs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Run script
-      run: python ./action/main.py
+      run: ./src/main.py
+      shell: python
