--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,8 @@
-name: 'My Custom Action'
-description: 'A simple custom GitHub Action'
-runs:
-  using: 'composite'
-  steps:
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Run script
-      run: python main.py
-      working-directory: .
-      shell: bash
+- name: Checkout action repository
+  uses: actions/checkout@v2
+  with:
+    repository: akashvarshney2023/tf-naming-check
+    path: action
+
+- name: Run script
+  run: python action/main.py
